--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -55,7 +55,11 @@ CONFIG_BT_DIS_MANUF="Kinesis Corporation"
 #CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
 #CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24
 #CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
-CONFIG_BT_BAS=n #Set this to y to enable BLE battery reporting
+CONFIG_BT_BAS=y #Set this to y to enable BLE battery reporting
+
+# Config fixes from https://github.com/KinesisCorporation/Adv360-Pro-ZMK/issues/278
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_LL_SW_LLCP=y
 
 #Misc configuration
 CONFIG_USB_DEVICE_VID=0x29EA
