--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -59,7 +59,7 @@ CONFIG_BT_BAS=y #Set this to y to enable BLE battery reporting
 
 # Config fixes from https://github.com/KinesisCorporation/Adv360-Pro-ZMK/issues/278
 CONFIG_BT_CTLR_PHY_2M=n
-CONFIG_BT_LL_SW_LLCP=y
+#CONFIG_BT_LL_SW_LLCP=y # causes error in build
 
 #Misc configuration
 CONFIG_USB_DEVICE_VID=0x29EA
