--- a/config/boards/arm/adv360/adv360_right_defconfig
+++ b/config/boards/arm/adv360/adv360_right_defconfig
@@ -56,8 +56,7 @@ CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
 # Config fixes from https://github.com/KinesisCorporation/Adv360-Pro-ZMK/issues/278
-CONFIG_BT_CTLR_PHY_2M=n
-CONFIG_BT_LL_SW_LLCP=y
+#CONFIG_BT_LL_SW_LLCP=y # causes error?
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
